- Bug #1382: Fixed space removal in CDbCriteria::compare() (Sam Dark)
- Bug #1384: SET NAMES problem with MSSQL PDO Provider (Qiang)
- Enh #1361: Added linkLabelWrapper, firstItemCssClass and lastItemCssClass to CMenu (Qiang)
- Enh #1371: Improved js code in gii view templates to allow easier subclassing (Qiang)
- Enh #1392: Added CCaptchaAction::fixedVerifyCode (Qiang)
- Enh: Added CValidator::safe to allow marking a validator as safe or unsafe (Qiang)
- Chg #1309: CHttpRequest::getPathInfo() now always returns decoded results (Qiang)
- New: Upgraded JQuery UI to 1.8.2 (Sam Dark)

Version 1.1.3 July 4, 2010
--------------------------
- Bug #856: Logout doesn't work when CWebUser::identityCookie is configured and allowAutoLogin is set true (Qiang)
- Bug #1027: CButtonColumn->buttons is ignored (Sam Dark)
- Bug #1039: Table prefix feature did not work with PostgreSQL and AR (Qiang)
- Bug #1046: Fixed the bug that CDbFixtureManager did not properly initialize the fixture data (Qiang)
- Bug #0147: Fixed the bug that changing CAuthItem.description value would cause an exception when using CPhpAuthManager (Qiang)
- Bug #1050: Fixed the bug that filter conditions were prefilled with default values when using an AR model in CGridView (Qiang)
- Bug #1109: CActiveRecord::getRelated() did not refresh when setting the $refresh parameter to be true (Qiang)
- Bug #1142: Fixed the character encoding in polish translations (pawel.drylo)
- Bug #1149: CHtml::resolveName() does not work with multiple dimensional attributes (Qiang)
- Bug #1176: CVarDumper may omit some backslashes in the syntax-highlighted display (Qiang)
- Bug #1190: CLocale::getMonthNames may fail due to a typo (Qiang)
- Bug #1208: Unsigned integer column type was not handled correctly (Qiang)
- Bug #1213: Fixed the bug that skipOnError doesn't have effect on inline validators (Qiang)
- Bug #1226: CWebUser::autoRenewCookie does not handle the case when the user is already logged in (Qiang)